projects/giri-may/clusternetworkpolicies/ccnp11.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: ccnp11
  project: giri-may
spec:
  rules:
  - name: cnpr
    version: v1
  version: v1
