projects/giri-may/clusternetworkpolicies/ccnp2.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: ccnp2
  project: giri-may
spec:
  rules:
  - name: cnpr
    version: v2
  version: v2
